[package]
name = "zeta"
version = "0.1.0"
edition = "2021"
default-run = "zeta"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = "0.7"
base64 = "0.22"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
dotenvy = "0.15"
